--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://JulianTorres1.github.io/portfolio",
   "name": "official-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -8,10 +9,12 @@
     "@emotion/is-prop-valid": "^1.1.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11",
+    "@mui/icons-material": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^5",
+    "gh-pages": "^3.2.3",
     "hoist-non-react-statics": "^3.3.2",
     "next": "^12.0.9",
     "react": "^17.0.2",
@@ -27,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
