--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11",
     "@mui/icons-material": "^5.3.1",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^5",
+    "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
     "hoist-non-react-statics": "^3.3.2",
     "next": "^12.0.9",
