falta la funcionalidad del ContactForm.jsx, falta un mejor baner.png, un logo nuevo, y añadir projectos nuevos

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.8.1",
+    "@emailjs/browser": "^3.4.0",
     "@emotion/is-prop-valid": "^1.1.1",
     "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11",
+    "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.1",
