--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JulianTorres1.github.io/portfolio",
+  "homepage": ".",
   "name": "official-portfolio",
   "version": "0.1.0",
   "private": true,
