--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@emotion/is-prop-valid": "^1.1.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/ibm-plex-mono": "^4.5.7",
+    "@fontsource/open-sans": "^4.5.8",
+    "@fontsource/source-code-pro": "^4.5.6",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.2",
     "@react-icons/all-files": "^4.1.0",
