--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.1.4",
+    "axios": "^1.2.2",
     "framer-motion": "^5.6.0",
     "gh-pages": "^3.2.3",
     "hoist-non-react-statics": "^3.3.2",
